--- a/frontend/src/css/Borrow.css
+++ b/frontend/src/css/Borrow.css
@@ -59,3 +59,17 @@
 .ull{
     margin-left: 4%;
 }
+
+
+.viewB{
+    padding: 5px;
+    border: none;
+    color: #fff;
+    letter-spacing: 0.3px;
+    border-radius: 6px;
+    font-size: 10px;
+    font-weight: 500;
+    cursor: pointer;
+    background-color: #4070f4;
+    transition: all 0.3s ease;
+}
